<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="32dp"
              android:background="#ffffff">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/imgLockIcon"
        android:src="@drawable/lock_icon"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/lblEnterPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/password_dialog"
        android:textColor="#000000"
        android:layout_marginTop="8dp">

    </TextView>

    <EditText
        android:id="@+id/txtPasswordPrompt"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:padding="8dp">
        <requestFocus/>
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnterPassword"
        android:text="@string/dialog_enter"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/lblInvalidPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/error_invalid_password"
        android:textColor="#ff0000"
        android:textSize="14sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/lblForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/error_forgot_password"
        android:textColor="#ff0000"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
