<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="32dp"
              android:background="#ffffff">

    <ImageView
        android:id="@+id/imgLockIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/lock_icon"/>

    <TextView
        android:id="@+id/lblNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:text="@string/new_password">
    </TextView>

    <EditText
        android:id="@+id/txtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">
    </EditText>

    <TextView
        android:id="@+id/lblNewPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_password_confirm">

    </TextView>

    <EditText
        android:id="@+id/txtNewPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/updatePasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/save_password">

    </Button>

</LinearLayout>